src/parser/snapshots/monkey_language_server__parser__test__array_index_unhappy_5_errors.snap
---
source: src/parser/test.rs
description: "foo[@]"
expression: "parser_errors(\"foo[@]\", errors)"
---
foo[@]
    ^ SyntaxError: Unexpected '@'.
